# PT-OSS-HealthCheck-Studio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: DoD.md  NFR.md  data_model_v0.md  iac_baseline.md  risk_register.md
docs/adr/: ADR-000-template.md  ADR-001-backend-language-fastapi.md  ADR-002-frontend-framework-nextjs.md  ADR-003-workflow-engine-temporal.md  ADR-004-database-strategy-postgresql.md  ADR-005-object-storage-s3-compatible.md  ADR-006-document-extraction.md  ADR-007-ocr-strategy.md  ADR-008-multi-tenancy-rls.md  ADR-009-ptil-versioning.md  ADR-010-rule-package-format.md  ADR-011-search-strategy-postgres.md  ADR-012-ai-provider-strategy.md  ADR-013-deployment-target-container.md  ADR-014-ci-cd-tooling-github-actions-argocd.md  ADR-015-observability-prometheus-grafana.md
docs/calibration/: ExampleOrg_calibration.json
infra/terraform/: main.tf
releases/: README.md
rules/: rule-package-v0.1.0.json
schemas/ptil/: ptil-0.1.0-EvidenceClaim.json  ptil-0.1.0-EvidenceDocument.json  ptil-0.1.0-EvidenceMapping.json  ptil-0.1.0-MetricResult.json  ptil-0.1.0-ReviewDecision.json  ptil-0.1.0-RuleEvaluation.json  ptil-0.1.0-ValidationAlert.json
scripts/: remove_copilot_msgfilter.py
src/ptoss/: __init__.py  calibration.py  models.py  (+5 more)
tests/: test_evidence_index.py  test_precisionfab.py  test_reporting.py  test_repository.py  test_review_board.py  test_rules.py  test_store.py  test_tenant_isolation.py  test_tier_b.py  test_tier_c.py  test_workflow.py
(+6 files in other folders)
